--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
 //    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+//    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin'
 }
 
 group 'com.nesp.sdk'
