--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ group 'com.nesp.sdk'
 version '1.0-SNAPSHOT'
 
 repositories {
+    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+    google()
+    maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
+    maven { url "https://jitpack.io" }
     mavenCentral()
 }
 
