--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 plugins {
     id 'java'
 //    id 'application'
-//    id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.openjfx.javafxplugin'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
+//    id 'org.openjfx.javafxplugin'
 }
 
 group 'com.nesp.sdk'
 version '1.0-SNAPSHOT'
 
-repositories {
-    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
-    google()
-    maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
-    maven { url "https://jitpack.io" }
-    mavenCentral()
+allprojects {
+    repositories {
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        google()
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+    }
 }
 
 ext {
@@ -39,6 +41,8 @@ javafx {
 
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
+    apiElements project(':nesp-sdk-java')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
