Update: update nesp-sdk-java

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ javafx {
 
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
-    apiElements project(':nesp-sdk-java')
+    implementation project(':nesp-sdk-java')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
