--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 */
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'org.openjfx.javafxplugin'
 
 group 'com.nesp.sdk'
@@ -47,6 +48,8 @@ javafx {
 dependencies {
     implementation 'org.jetbrains:annotations:21.0.1'
     implementation project(':nesp-sdk-java')
+//    implementation project(':nesp-sdk-kotlin')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
