--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     implementation 'org.jetbrains:annotations:21.0.1'
     implementation project(':nesp-sdk-java')
 //    implementation project(':nesp-sdk-kotlin')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.21"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.5.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
