--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,8 @@ allprojects {
     }
 }
 
-ext {
-    junitVersion = '5.7.1'
-}
-
-sourceCompatibility = '16'
-targetCompatibility = '16'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -41,22 +37,23 @@ tasks.withType(JavaCompile) {
 //}
 
 javafx {
-    version = '16'
+    version = '17'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:21.0.1'
+    implementation 'org.jetbrains:annotations:22.0.0'
     implementation project(':nesp-sdk-java')
 //    implementation project(':nesp-sdk-kotlin')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.21"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.5.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.5.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.5.2-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.5.2-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt'
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.google.guava:guava:23.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
