Add Cache and Database module
1. Cache: MemoryCache and StoreCache
2. Database: Likely Android API JDBC implements

--- a/build.gradle
+++ b/build.gradle
@@ -50,10 +50,14 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.5.2-native-mt'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.google.guava:guava:23.0'
+    implementation 'com.google.guava:guava:31.0.1-jre'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    implementation 'com.alibaba:fastjson:1.2.78'
+    implementation 'org.json:json:20210307'
 }
 
 test {
