--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+//    implementation 'org.xerial:sqlite-jdbc-sqlcipher:3.20.0'
     implementation 'com.alibaba:fastjson:1.2.78'
     implementation 'org.json:json:20210307'
 }
