--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'kotlin'
 apply plugin: 'org.openjfx.javafxplugin'
 
 group 'com.nesp.sdk'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 allprojects {
     repositories {
@@ -45,7 +45,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation project(':nesp-sdk-java')
 //    implementation project(':nesp-sdk-kotlin')
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.5.2-native-mt'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.5.2-native-mt'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt'
