--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'org.openjfx.javafxplugin'
 
-group 'com.nesp.sdk'
-version '1.0'
+group 'com.nesp.sdk.javafx'
+version '1.0-alpha'
 
 allprojects {
     repositories {
@@ -37,7 +37,7 @@ tasks.withType(JavaCompile) {
 //}
 
 javafx {
-    version = '17'
+    version = '17.0.1'
     modules = ['javafx.base','javafx.graphics', 'javafx.controls', 'javafx.fxml']
 }
 
